# policybot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README-macOS.md  README.md  ReleaseNotes.md  comercial_llm_test.py  csv_to_text.py  debug_ollama.sh  docker-compose-macos.yml  docker-compose.dev.yml  docker-compose.yml  download_pdfs.py  evaluation_app.py  main.py  nginx.conf  pdfs.csv  requirements-macos.txt  requirements.txt  sample_batch_data.json  setup-macos.sh  streamlit_app.py  test.py
backend/: .dockerignore  .env  .env.example  Dockerfile  download_models.py  entrypoint.sh  pyproject.toml  requirements.txt
backend/init-db/: 01_create_tables.sql
backend/src/: config.py  external.py  logger.py  main.py  prompts.py  util.py
backend/src/debug/: debug_llm.py
backend/src/rag/: LLM_interface.py  __init__.py  chat_manager.py  pdf_processor.py  retriever.py
backend/src/routers/: chat.py  pdf.py
backend/src/schema/: create_tables.py  db.py  overall_summaries.py  overall_summaries_crud.py  source_summaries.py  source_summaries_crud.py
chroma_db/f7ae0efe-4833-45f8-9030-be1d925be38c/: index_metadata.pickle
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
llm_results/: formatted_output_deepseek.txt  formatted_output_gemma.txt  formatted_output_llama.txt  formatted_output_mistral.txt  formatted_output_qwen.txt
src/: config.py  logger.py
src/config/: settings.py
src/document_processing/: loader.py  pdf_processor.py
src/evaluation/: __init__.py  advanced_metrics.py  (+2 more)
(+39 files in other folders)
