[project]
name = "backend"
version = "0.1.0"
description = "FastAPI Backend for hosting the policybot application API "
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "flagembedding>=1.3.5",
    "langchain>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.12",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.10",
    "psycopg2-binary>=2.9.10",
    "pymupdf>=1.26.4",
    "qdrant-client>=1.15.1",
]
